# react-native-base64-image-converter

./: CONTRIBUTING.md  README.md  package.json  react-native-base64-image-converter.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/base64imageconverter/: Base64ImageConverterModule.java  Base64ImageConverterPackage.java  ImageUtils.java
cpp/: react-native-base64-image-converter.cpp  react-native-base64-image-converter.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/base64imageconverterexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/Base64ImageConverterExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/Base64ImageConverterExample.xcodeproj/: project.pbxproj
example/ios/Base64ImageConverterExample.xcodeproj/xcshareddata/xcschemes/: Base64ImageConverterExample.xcscheme
example/ios/Base64ImageConverterExample.xcworkspace/: contents.xcworkspacedata
example/ios/Base64ImageConverterExampleTests/: Base64ImageConverterExampleTests.m
example/src/: App.tsx
ios/: Base64ImageConverter.h  Base64ImageConverter.mm  YeetJSIUtils.h
src/: index.tsx
